# stache

./: .gitignore  Makefile  README.md  stache.cabal
app/: Stache.hs
js/: escapeHTML.js
src/Text/Stache/: Compile.hs  JavaScript.hs  Parse.y  Php.hs  Scan.x  Types.hs
stachec/: Main.hs  Stache.hs
test/: runtest.js  runtest.php  template.html
