name:                stache
version:             0.2.0.0
synopsis:            Compile basic templates to JS AMD modules.
-- description:
homepage:            https://github.com/zaquest/stache#readme
license:             BSD3
license-file:        LICENSE
author:              zaquest
maintainer:          web.elektro.net@gmail.com
copyright:           2017 zaquest
category:            Web, Template, JavaScript
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Text.Stache.Types
                      ,Text.Stache.Scan
                      ,Text.Stache.Parse
                      ,Text.Stache.JavaScript
                      ,Text.Stache.Php
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,array
                      ,text
                      ,utf8-string
                      ,containers
                      ,mtl

executable stachejs
  hs-source-dirs:      stachec
  main-is:             Stache.hs
  default-language:    Haskell2010
  cpp-options:         -DJS
  build-depends:       base >= 4.7 && < 5
                      ,text
                      ,stache

executable stachephp
  hs-source-dirs:      stachec
  main-is:             Stache.hs
  default-language:    Haskell2010
  cpp-options:         -DPHP
  build-depends:       base >= 4.7 && < 5
                      ,text
                      ,stache
