name:                stache
version:             0.2.0.1
synopsis:            Compile basic templates to JS AMD modules.
-- description:
homepage:            https://github.com/zaquest/stache#readme
license:             BSD3
license-file:        LICENSE
author:              zaquest
maintainer:          web.elektro.net@gmail.com
copyright:           2017 zaquest
category:            Web, Template, JavaScript, PHP
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Text.Stache.Compile
                      ,Text.Stache.Scan
                      ,Text.Stache.Parse
                      ,Text.Stache.JavaScript
                      ,Text.Stache.Php
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,array
                      ,text
                      ,utf8-string
                      ,mtl

executable stachec
  hs-source-dirs:      app
  main-is:             Stache.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,text
                      ,stache
